# python-alfresco-api

./: .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG_V1_1_0.md  LICENSE  MANIFEST.in  README.md  Release Notes v1-1.md  publish_to_pypi.py  pyproject.toml  requirements-codegen.txt  requirements-dev.txt  requirements.txt  run_tests.py  sample-dot-env.txt  setup.py
config/: README.md  auth.yaml  client_config.yaml  core.yaml  discovery.yaml  general.yaml  model.yaml  search.yaml  search_sql.yaml  workflow.yaml
docs/: API_DOCUMENTATION_INDEX.md  ARCH_DIAGRAM_AND_OVERVIEW.md  AUTHENTICATION_401_SOLUTION.md  AUTHENTICATION_GUIDE.md  CHANGES_SINCE_V1_0_2.md  CLIENT_TYPES_GUIDE.md  CONVERSION_UTILITIES_DESIGN.md  DOCUMENTATION_SUMMARY.md  ENVIRONMENT_CONFIGURATION.md  ESSENTIAL_OPERATIONS_GUIDE.md  EVENT_GATEWAY_GUIDE.md  MASTER_CLIENT_GUIDE.md  PACKAGE_DEVELOPERS_GUIDE.md  PYDANTIC_MODELS_GUIDE.md  REQUEST_TYPES_GUIDE.md  clients_doc.md  utils_api.md
docs/arch/: V1_1_COMPREHENSIVE_ANSWERS.md  V1_1_FINAL_ARCHITECTURE_DECISION.md  V1_1_HIERARCHICAL_ARCHITECTURE.md  V1_1_REFINED_HIERARCHICAL_ARCHITECTURE.md
docs/auth/: auth_api.md  auth_models.md
docs/core/: core_api.md  core_models.md
docs/discovery/: discovery_api.md  discovery_models.md
docs/model/: model_api.md  model_models.md
docs/other/: MASTER_CLIENT_GUIDE.md  python-alfresco-api.md
docs/search/: search_api.md  search_models.md
docs/search_sql/: search_sql_api.md  search_sql_models.md
docs/workflow/: workflow_api.md  workflow_models.md
enhanced_generated/: AlfrescoClient.py  BaseClient.py  __init__.py
enhanced_generated/clients/: __init__.py  alfresco_rest_client.py  base.py
enhanced_generated/enhanced/: alfresco-auth_enhanced.py  alfresco-core_enhanced.py  alfresco-discovery_enhanced.py  alfresco-model_enhanced.py  alfresco-search-sql_enhanced.py  alfresco-search_enhanced.py  alfresco-workflow_enhanced.py  search_fixes.py
enhanced_generated/examples/: alfresco_client_usage.py
enhanced_generated/models/: alfresco_auth_models.py  alfresco_core_models.py  alfresco_discovery_models.py  alfresco_model_models.py  alfresco_search_models.py  alfresco_search_sql_models.py  alfresco_workflow_models.py
enhanced_generated/openapi3/: alfresco-auth.openapi3.yaml  alfresco-core.openapi3.yaml  alfresco-discovery.openapi3.yaml  alfresco-model.openapi3.yaml  alfresco-search-sql.openapi3.yaml  alfresco-search.openapi3.yaml  alfresco-workflow.openapi3.yaml
enhanced_generated/preprocessed/: alfresco-auth.preprocessed.yaml  alfresco-discovery.preprocessed.yaml  alfresco-search-sql.preprocessed.yaml
examples/: alfresco_client_usage.py  auth_examples.py  auth_helpers.py  basic_client.py  conversion_example.py  core_api_pydantic_examples.py  core_examples.py  discovery_examples.py  event_quick_start.py  field_annotation_documentation_example.py  llm_integration.py  master_client_examples.py  master_client_usage.py  mcp_integration_example.py  mcp_repository_resources_v11.py  model_examples.py  oauth2_examples.py  pydantic_models_examples.py  search_examples.py  search_sql_examples.py  true_high_level_api_example.py  v11_lazy_architecture_demo.py  v11_three_tier_prototype.py  without_pydantic_comparison.py  workflow_examples.py
examples/operations/: README.md  basic_operations.py  search_operations.py  upload_document.py  versioning_workflow.py
openapi/: README.md
openapi/openapi2/: README.md  alfresco-core.yaml
openapi/openapi2-processed/: README.md  alfresco-model.yaml  alfresco-search.yaml  alfresco-workflow.yaml
openapi/openapi3/: README.md  alfresco-auth.yaml  alfresco-model.yaml  alfresco-search-sql.yaml
python_alfresco_api/: README.md  __init__.py  auth_util.py  client_factory.py  setup.py
python_alfresco_api/clients/: __init__.py  auth_client.py  conversion_utils.py  core_client.py  discovery_client.py  field_mapping.py  master_client.py  model_client.py  models.py  search_client.py  search_sql_client.py  workflow_client.py
python_alfresco_api/docs/: API_REFERENCE.md  INSTALLATION.md  README.md
python_alfresco_api/events/: __init__.py  event_client.py  models.py
python_alfresco_api/examples/: basic_usage.py  llm_integration.py
python_alfresco_api/models/: __init__.py  alfresco_auth_models.py  alfresco_core_models.py  alfresco_discovery_models.py  (+4 more)
python_alfresco_api/raw_clients/alfresco_search_sql_client/: README.md  pyproject.toml
python_alfresco_api/raw_clients/alfresco_search_sql_client/search_sql_client/: __init__.py
python_alfresco_api/raw_clients/alfresco_search_sql_client/search_sql_client/api/sql/: search.py
python_alfresco_api/raw_clients/alfresco_search_sql_client/search_sql_client/models/: __init__.py  docs_item.py  pagination.py  solr_result_set.py  sql_result_set_paging.py  sql_result_set_paging_list.py  sql_result_set_row_entry.py  sql_search_request.py
scripts/: GENERATOR_SCRIPT_COVERAGE.md  README.md  enhanced_hybrid_approach.py  generate_alfresco_client.py  test_performance.py  test_server.py
tests/: COMPREHENSIVE_TESTING_SUMMARY.md  README.md  __init__.py  conftest.py  requirements-test.txt  run_tests.py  test_alfresco_basic.py  test_all_gets_high_level.py  test_all_gets_high_level_async.py  test_all_gets_high_level_detailed.py  test_all_gets_high_level_detailed_async.py  test_auth_debug.py  test_authentication_strategies.py  test_authutil_fixed.py  test_basic.py  test_client_dependencies.py  test_client_factory_configuration.py  test_complete_summary.py  test_comprehensive_coverage_recovery.py  test_current_architecture.py  test_direct_api.py  test_enhanced_coverage.py  test_event_community_enterprise.py  test_event_detection.py  test_event_gateway_comprehensive.py  test_highlevel_utils.py  test_individual_apis.py  test_individual_apis.py.bak  test_integration_live_server.py  test_live_connection.py  test_mcp_integration.py  test_mcp_integration_modern.py  test_mcp_v11_true_high_level_apis_fixed.py  test_modern_architecture.py  test_simple.py  test_summary.py.bak  test_todays_15_subclients.py  test_unit_master_client.py  test_working_api.py
(+2544 files in other folders)
