[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-alfresco-api"
version = "1.0.0"
description = "Python client for Alfresco Content Services REST API with event support"
authors = [
    {name = "Python Alfresco API Team", email = "dev@example.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
keywords = ["alfresco", "content-management", "rest-api", "events", "activemq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Office Suites",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "attrs>=23.1.0",
    "python-dateutil>=2.8.0",
    "typing-extensions>=4.7.0",
    "PyYAML>=6.0",
    "stomp.py>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/your-org/python-alfresco-mcp-server"
Repository = "https://github.com/your-org/python-alfresco-mcp-server"
Documentation = "https://github.com/your-org/python-alfresco-mcp-server/docs"

[tool.hatch.build.targets.wheel]
packages = ["python_alfresco_api"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["alfresco_mcp_server"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
] 